@@ -1,3 +1,4 @@
 Makefile
 Makefile.in
 schroot
+schroot.dox
