@@ -1,5 +1,10 @@
 2005-12-28  Roger Leigh  <rleigh@debian.org>
 
+	* Add doxygen support to configure and doc/Makefile.am, and
+	distribute the doxygen-generated documentation.
+
+2005-12-28  Roger Leigh  <rleigh@debian.org>
+
 	* schroot/schroot-options.cc: Always qualify string_list with
 	sbuild::.
 
